<resources>
    <string name="app_name">Médicament</string>
    <string name="title_search">Rechercher</string>
    <string name="title_bookmark">Favoris</string>
    <string name="title_about">À propos</string>
    <string name="search_title">Rechercher</string>
    <string name="search_hint">Entrer un nom de médicament</string>
    <string name="label_forme_pharma">Forme :</string>
    <string name="label_voie_admin">Voie d\'administration :</string>
    <string name="label_status">Statut :</string>
    <string name="label_etat">Etat commercialisation :</string>
    <string name="label_date_amm">Date autorisation mise sur le marché :</string>
    <string name="label_titulaire">Titulaire :</string>
    <string name="label_surv_renforcee">Surveillance renforcée :</string>
    <string name="label_designation_elem">Elément pharmaceutique :</string>
    <string name="label_info_general">Informations générales</string>
    <string name="label_compo">Composition</string>
    <string name="label_deno_substance">Denomination substance :</string>
    <string name="label_code_substance">Code substance :</string>
    <string name="label_dosage_substance">Dosage substance :</string>
    <string name="label_ref_substance">Compo de ref pour :</string>
    <string name="label_nature_composant">Nature composant :</string>
    <string name="id_grp_gener">Groupe générique :</string>
    <string name="label_lib_grp_gener">Libellé du groupe :</string>
    <string name="label_typ_gener">Type de générique :</string>
    <string name="label_num_tri">Numéro de tri :</string>
    <string name="composition">Composition</string>
    <string name="deli_condition">Condition de délivrance</string>
    <string name="smr">Service Médical Rendu (SMR)</string>
    <string name="label_libelle_smr">Libellé du SMR :</string>
    <string name="label_valeur_smr">Valeur SMR :</string>
    <string name="label_motif_eval_smr">Motif d\'évaluation :</string>
    <string name="label_date_avis_smr">Date avis :</string>
    <string name="label_code_dossier_has">Code dossier HAS :</string>
    <string name="asmr">Amélioration du service médical rendu (ASMR)</string>
    <string name="label_libelle_asmr">Libellé du ASMR :</string>
    <string name="label_valeur_asmr">Valeur de l\'ASMR :</string>
    <string name="label_motif_eval_asmr">Motif d\'évaluation ASMR :</string>
    <string name="label_date_avis_asmr">Date de l\'avis :</string>
    <string name="info_importantes">Informations Importantes</string>
    <string name="date_deb">Date de début :</string>
    <string name="date_fin">Date de fin :</string>
    <string name="notice_d_utilisation">Notice d\'utilisation</string>
    <string name="generique_title">Générique</string>
    <string name="title_activity_detail_view_pager">DetailViewPager</string>
    <string name="label_date_decla_commer">Date commer. :</string>
    <string name="barcode_search">Barcode search</string>
    <string name="search">Chercher</string>
    <string name="bookmark_medic">bookmark_medic</string>
    <string name="app_description">Cette application Android permet de consulter les informations des médicaments du marché français. Ces données sont mise à disposition par la HAS. Médicament ne se soustrait pas à l\'avi d\'un professionnel de santé. Toutes les données sont fournit \"telle quelle\" comme elles ont était mise à disposition par la HAS.</string>
    <string name="contact_group" translatable="false">ylt.medicament@gmail.com</string>
    <string name="no_data">Impossible de charger les données</string>
    <string name="title_settings">Configuration</string>
    <string name="add_bookmarked">Médicament ajouté aux favoris !</string>
    <string name="del_bookmarked">Médicament retiré des favoris !"</string>


    <string-array name="protocol">
        <item>http</item>
        <item>https</item>
    </string-array>

    <string-array name="protocol_values">
        <item>http</item>
        <item>https</item>
    </string-array>


</resources>
